@@ -71,6 +71,13 @@ Mode</FONT></B></A>&nbsp; A mode for editing ATS source code in Emacs.
 
 <HR SIZE=6 ALIGN=LEFT><P>
 
+IRC
+channel <A href="http://webchat.freenode.net/"><FONT size="+1"><B>##ats</FONT></B></A>:
+for chatting about ATS.
+<P>
+
+<HR SIZE=6 ALIGN=LEFT><P>
+
 <FONT size="+1"><B> <A
 href="http://en.wikibooks.org/wiki/ATS:_Programming_with_Theorem-Proving">ATS/PwTP</A>
 </B></FONT>&nbsp; A wikibook on programming in <A href="http://www.ats-lang.org">ATS</A>
